--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang = "en-US">
-<body style="background-color:#bfc0ee;">
-<h1>Isabelle's Student Home Page</h1>
-
-<a href="https://turtlesmew.github.io/">GitHub Pages</a> | 
-<a href="http://webp.svsu.edu/~irjohns/">mDrive</a> | 
-<a href="https://csis.svsu.edu/~irjohns/">CSIS server</a> 
-<br />
-<br />
-<h2>Assignments</h2>
-<a href="assignments/assignment01.html">Assignment 01</a><br />
-<a href="#">Assignment 02</a><br />
-<a href="#">Assignment 03</a><br />
-<a href="#">Assignment 04</a><br />
-<a href="#">Assignment 05</a><br />
-<a href="#">Assignment 06</a><br />
-<a href="#">Assignment 07</a><br />
-  </body>
-  
+<html lang="en-US">
+ <head></head>
+ <body style="background-color:#bfc0ee;"> 
+  <h1>Isabelle's Student Home Page</h1> 
+  <a href="https://turtlesmew.github.io/">GitHub Pages</a> | 
+  <a href="http://webp.svsu.edu/~irjohns/">mDrive</a> | 
+  <a href="https://csis.svsu.edu/~irjohns/">CSIS server</a> 
+  <br /> 
+  <br /> 
+  <h2>Assignments</h2> 
+  <a href="assignments/assignment01.html">Assignment 01</a>
+  <br /> 
+  <a href="#">Assignment 02</a>
+  <br /> 
+  <a href="#">Assignment 03</a>
+  <br /> 
+  <a href="#">Assignment 04</a>
+  <br /> 
+  <a href="#">Assignment 05</a>
+  <br /> 
+  <a href="#">Assignment 06</a>
+  <br /> 
+  <a href="#">Assignment 07</a>
+  <br />  
+ </body>
 </html>
