--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>Assignments</h2> 
   <a href="assignments/assignment01.html">Assignment 01</a>
   <br /> 
-  <a href="#">Assignment 02</a>
+  <a href="assignments/assignment02.html">Assignment 02</a>
   <br /> 
   <a href="#">Assignment 03</a>
   <br /> 
