--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -37,7 +37,7 @@
       <h1>Assignment 01</h1>
       <nav> <!-- Navigation section for links to move pages -->
          <a href="/index.html" style="float:left">Back</a>
-         <a href="#" style="float:right">Next</a> <!-- link to go to assignment 2, not yet created-->
+         <a href="/assignments/assignment02.html" style="float:right">Next</a> <!-- link to go to assignment 2, not yet created-->
       </nav>
       <hr style="height:3px;border-width:0;"/> <!-- This is just a divider to separate the navigation section and the next section. It is not visible. -->
       <div>
