--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html lang = en>
 <head>
     <link rel="stylesheet" href="assignment02.css">
 </head>
+<body>
 <header>
   <h1>Assignment 02</h1>
   <p>by Imagona Codalittle</p>
@@ -23,7 +26,7 @@
   <li>inline, internal and external CSS</li>
 </ul>
 <hr />
-<p>
+<p style = "color:red";>
   Hello, world
 </p>
 <p class="classy">Classy 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
@@ -154,3 +157,5 @@
 <footer>
   <p>&copy; 2020. George Corser. All rights reserved. </p>
 </footer>
+</body>
+</html>
