--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -91,8 +91,8 @@
 </ul>
 <hr />
   <p>Table 1. How to turn $48,000 into $1,000,000.</p>
-  <table border="1" width="100%">
-<thead>
+  <table border="1" width="100%" class = "mousey td">
+<thead class = "stripey">
   <tr>
     <th>Initial</th>
     <th>Monthly</th>
@@ -101,29 +101,29 @@
     <th>Savings</th>
   </tr>
 </thead>
-<tbody>
-  <tr>
+<tbody class = "rightey td">
+  <tr class= "stripey tr:nth-child(odd)">
     <td>100</td>
     <td>100</td>
     <td>10 years</td>
     <td>10%</td>
     <td>45,923.81</td>
   </tr>
-  <tr>
+  <tr class = "stripey tr:nth-child(even)">
     <td>100</td>
     <td>100</td>
     <td>20 years</td>
     <td>10%</td>
     <td>139,100.92</td>
   </tr>
-  <tr>
+  <tr class= "stripey tr:nth-child(odd)">
     <td>100</td>
     <td>100</td>
     <td>30 years</td>
     <td>10%</td>
     <td>380,778.35</td>
   </tr>
-  <tr>
+  <tr class = "stripey tr:nth-child(even)">
     <td>100</td>
     <td>100</td>
     <td>40 years</td>
@@ -139,9 +139,9 @@
 	<legend>Survey Respondent</legend>
 	<label for="fname">First Name</label>
   <br /> 
-  <input name="fname" type="text" placeholder="Chris" /> 
+  <input class = "pinkey" name="fname" type="text" placeholder="Chris" /> 
   <br /> 
-  <label for="lname">Last Name</label>   <br /> 
+  <label class = "pinkey" for="lname">Last Name</label>   <br /> 
 	<input name="lname" type="text" placeholder="Jones" /> 
   <br /> <br /> 
     <label for="member">Membership Status</label> 
