--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -102,28 +102,28 @@
   </tr>
 </thead>
 <tbody class = "rightey td">
-  <tr class= "stripey tr:nth-child(odd)">
+  <tr>
     <td>100</td>
     <td>100</td>
     <td>10 years</td>
     <td>10%</td>
     <td>45,923.81</td>
   </tr>
-  <tr class = "stripey tr:nth-child(even)">
+  <tr>
     <td>100</td>
     <td>100</td>
     <td>20 years</td>
     <td>10%</td>
     <td>139,100.92</td>
   </tr>
-  <tr class= "stripey tr:nth-child(odd)">
+  <tr>
     <td>100</td>
     <td>100</td>
     <td>30 years</td>
     <td>10%</td>
     <td>380,778.35</td>
   </tr>
-  <tr class = "stripey tr:nth-child(even)">
+  <tr>
     <td>100</td>
     <td>100</td>
     <td>40 years</td>
@@ -141,8 +141,8 @@
   <br /> 
   <input class = "pinkey" name="fname" type="text" placeholder="Chris" /> 
   <br /> 
-  <label class = "pinkey" for="lname">Last Name</label>   <br /> 
-	<input name="lname" type="text" placeholder="Jones" /> 
+  <label for="lname">Last Name</label>   <br /> 
+	<input class = "pinkey" name="lname" type="text" placeholder="Jones" /> 
   <br /> <br /> 
     <label for="member">Membership Status</label> 
     <br />
