--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -91,8 +91,8 @@
 </ul>
 <hr />
   <p>Table 1. How to turn $48,000 into $1,000,000.</p>
-  <table border="1" width="100%" class = "stripey">
-<thead class= "mousey">
+  <table border="1" width="100%" class = "stripey mousey rightey">
+<thead>
   <tr>
     <th>Initial</th>
     <th>Monthly</th>
@@ -101,7 +101,7 @@
     <th>Savings</th>
   </tr>
 </thead>
-<tbody class = "rightey">
+<tbody>
   <tr>
     <td>100</td>
     <td>100</td>
