--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -91,7 +91,7 @@
 </ul>
 <hr />
   <p>Table 1. How to turn $48,000 into $1,000,000.</p>
-  <table border="1" width="100%" class = "stripey mousey rightey">
+  <table border="1" width="100%" class = "stripey mousey rightey"> <!-- Number 12 -->
 <thead>
   <tr>
     <th>Initial</th>
@@ -134,15 +134,16 @@
 </table>
   <br />
   
-<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
+<!-- Number 13 -->
+<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank" class = "pinkey">
 	<fieldset>
 	<legend>Survey Respondent</legend>
 	<label for="fname">First Name</label>
   <br /> 
-  <input class = "pinkey" name="fname" type="text" placeholder="Chris" /> 
+  <input name="fname" type="text" placeholder="Chris" /> 
   <br /> 
   <label for="lname">Last Name</label>   <br /> 
-	<input class = "pinkey" name="lname" type="text" placeholder="Jones" /> 
+	<input name="lname" type="text" placeholder="Jones" /> 
   <br /> <br /> 
     <label for="member">Membership Status</label> 
     <br />
