--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -32,7 +32,7 @@
 <p class="classy">Classy 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
 <p class="classy">Classy 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
 <p class="classy">Classy 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
-<p id="igottabeme">Not classy. "I gotta be me." Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
+<p id="igottabeyou">Not classy. "I gotta be me." Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ixnay the igpay atinlay.</p>
 </section>
 
 <section>
@@ -134,16 +134,17 @@
 </table>
   <br />
   
-<!-- Number 13 -->
-<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank" class = "pinkey">
+<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
 	<fieldset>
 	<legend>Survey Respondent</legend>
 	<label for="fname">First Name</label>
   <br /> 
-  <input name="fname" type="text" placeholder="Chris" /> 
+		<!-- Number 13 -->
+  <input class = "pinkey" name="fname" type="text" placeholder="Chris" /> 
   <br /> 
   <label for="lname">Last Name</label>   <br /> 
-	<input name="lname" type="text" placeholder="Jones" /> 
+		<!-- Number 13 -->
+	<input class = "pinkey" name="lname" type="text" placeholder="Jones" /> 
   <br /> <br /> 
     <label for="member">Membership Status</label> 
     <br />
