--- a/index.html
+++ b/index.html
@@ -1,27 +1,92 @@
 <!DOCTYPE html>
-<html lang="en-US">
- <head></head>
- <body style="background-color:#bfc0ee;"> 
-  <h1>Isabelle's Student Home Page</h1> 
-  <a href="https://turtlesmew.github.io/">GitHub Pages</a> | 
-  <a href="http://webp.svsu.edu/~irjohns/">mDrive</a> | 
-  <a href="https://csis.svsu.edu/~irjohns/">CSIS server</a> 
-  <br /> 
-  <br /> 
-  <h2>Assignments</h2> 
-  <a href="assignments/assignment01.html">Assignment 01</a>
-  <br /> 
-  <a href="assignments/assignment02.html">Assignment 02</a>
-  <br /> 
-  <a href="assignments/assignment03.html">Assignment 03</a>
-  <br /> 
-  <a href="assignments/assignment04.html">Assignment 04</a>
-  <br /> 
-  <a href="assignments/assignment05.html">Assignment 05</a>
-  <br /> 
-  <a href="assignments/assignment06.html">Assignment 06</a>
-  <br /> 
-  <a href="assignments/assignment07.html">Assignment 07</a>
-  <br />  
- </body>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Isabelle's Student Home Page</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="startbootstrap-scrolling-nav/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="startbootstrap-scrolling-nav/css/scrolling-nav.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">CIS255</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://turtlesmew.github.io/">GitHub Pages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="http://webp.svsu.edu/~irjohns/">mDrive</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://csis.svsu.edu/~irjohns/">CSIS server</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <header class="bg-primary text-white">
+    <div class="container text-center">
+      <h1>Welcome to Isabelle's Student Home Page</h1>
+      <p class="lead">A landing page using a bootstrap template for CS255 assignments</p>
+    </div>
+  </header>
+
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>Assignments</h2>
+          <ul>
+            <li><a href="assignments/assignment01.html">Assignment 01</a></li>
+            <li><a href="assignments/assignment02.html">Assignment 02</a></li>
+            <li><a href="assignments/assignment03.html">Assignment 03</a></li>
+            <li><a href="assignments/assignment04.html">Assignment 04</a></li>
+			<li><a href="assignments/assignment05.html">Assignment 05</a></li>
+			<li><a href="assignments/assignment06.html">Assignment 06</a></li>
+			<li><a href="assignments/assignment07.html">Assignment 07</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom JavaScript for this theme -->
+  <script src="js/scrolling-nav.js"></script>
+
+</body>
+
 </html>
