--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -8,7 +8,9 @@
     </style>
   </head>
   <body>
-    <a href="https://turtlesmew.github.io/images/assignment03.PNG">assignment03.png</a>
+    <a href="https://turtlesmew.github.io/images/assignment03.PNG">
+      assignment03.png
+    </a>
     <h1>Golf Scorecard</h1>
     <table class="table table-striped">
       <tr id="0">
@@ -23,126 +25,198 @@
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="2">
         <td>2</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="3">
         <td>3</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="4">
         <td>4</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="5">
         <td>5</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="6">
         <td>6</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="7">
         <td>7</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="8">
         <td>8</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="9">
         <td>9</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="10">
         <td>10</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="11">
         <td>11</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="12">
         <td>12</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="13">
         <td>13</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="14">
         <td>14</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="15">
         <td>15</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="16">
         <td>16</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="17">
         <td>17</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="18">
         <td>18</td>
         <td>4</td>
         <td>-</td>
         <td>-</td>
-        <td><button class="btn btn-success">+</button> <button class="btn btn-danger">-</button> <button class="btn btn-secondary">C</button></td>
+        <td>
+          <button class="btn btn-success">+</button>{" "}
+          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-secondary">C</button>
+        </td>
       </tr>
       <tr id="totals">
         <td id="allTotal">TOTALS</td>
