--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -26,8 +26,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -37,8 +37,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -48,8 +48,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -59,8 +59,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -70,8 +70,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -81,8 +81,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -92,8 +92,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -103,8 +103,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -114,8 +114,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -125,8 +125,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -136,8 +136,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -147,8 +147,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -158,8 +158,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -169,8 +169,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -180,8 +180,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -191,8 +191,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -202,8 +202,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
@@ -213,8 +213,8 @@
         <td>-</td>
         <td>-</td>
         <td>
-          <button class="btn btn-success">+</button>{" "}
-          <button class="btn btn-danger">-</button>{" "}
+          <button class="btn btn-success">+</button>
+          <button class="btn btn-danger">-</button>
           <button class="btn btn-secondary">C</button>
         </td>
       </tr>
