--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <a href="https://turtlesmew.github.io/images/assignment03.PNG">
+    <a href="turtlesmew.github.io/images/assignment03.png">
       assignment03.png
     </a>
     <h1>Golf Scorecard</h1>
