--- a/assignments/clubEntry.html
+++ b/assignments/clubEntry.html
@@ -52,7 +52,7 @@
 	
 	function addClub() {
         // your code here
-		let sortNew = clubs[clubs.length][0];
+		let sortNew = clubs[clubs.length-1][0];
 		sortNew = sortNew +100;
 		newClubName = document.getElementById('clubName');
 		clubs.push([ sort, "New",  newClubName,   0, 0, 0, 0, 0, 0, 0]);
