--- a/assignments/clubEntry.html
+++ b/assignments/clubEntry.html
@@ -54,7 +54,7 @@
         // your code here
 		let sortNew = clubs[clubs.length-1][0];
 		sortNew = sortNew +100;
-		let newClubName = document.getElementById('clubName');
+		let newClubName = document.getElementById('clubName').value;
 		clubs.push([ sortNew, "New",  newClubName,   0, 0, 0, 0, 0, 0, 0]);
 		
 		let str = JSON.stringify(clubs);
