--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -8,7 +8,7 @@
 
   <h1>Assignment04 Exercises</h1>
   
-  <p><a href="#">Assignment04 excercises</a></p>
+  <p><a href="https://codepen.io/turtlesmew/pen/wvWJeVb">Assignment04 excercises</a></p>
   
 </body>
 </html>
