--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -1,3 +1,4 @@
+<body>
 <h2>Example Chart using Chart.js</h2>
 <canvas id="myChart"></canvas>
 
@@ -18,3 +19,5 @@
   console.log(dayjs().format("YYYY-MM-DD"));
 
 </script>
+<script src="https://turtlesmew.github.io/assignments/assignment05.js"></script>
+</body>
