--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -16,7 +16,7 @@
 <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 <script>
   dayjs().format();
-  console.log(dayjs().format("YYYY-MM-DD"));
+  console.log(dayjs().format("MMMM D, YYYY"));
 
 </script>
 <script src="https://turtlesmew.github.io/assignments/assignment05.js"></script>
