--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -14,10 +14,6 @@
 
 <!-- Day.js: https://day.js.org/docs/en/installation/browser -->
 <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-<script>
-  dayjs().format();
-  console.log(dayjs().format("MMMM D, YYYY"));
-
-</script>
+<script>dayjs().format();</script>
 <script src="https://turtlesmew.github.io/assignments/assignment05.js"></script>
 </body>
