--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -1,19 +1,32 @@
-<body>
-<h2>Example Chart using Chart.js</h2>
-<canvas id="myChart"></canvas>
-
-<h2>Example AJAX call to Covid19api</h2>
-<button type="button" onclick="loadContent()">Load Covid-19 Content</button>
-
-
-<!-- ChartJS: https://www.chartjs.org/ -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
-
-<!-- Lodash: https://lodash.com/ -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
-
-<!-- Day.js: https://day.js.org/docs/en/installation/browser -->
-<script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-<script>dayjs().format();</script>
-<script src="https://turtlesmew.github.io/assignments/assignment05.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en-US">
+   <head>
+      <title>Assignment 05</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+   </head>
+   <body>
+      <h2>Example Chart using Chart.js</h2>
+      <!-- Step 7 Put the chart inside a Bootstrap DIV. Add a second DIV so the second DIV appears to the right of the chart -->
+      <div class = "container">
+         <div class = "row">
+            <div class = "col-12 col-md-8">
+               <canvas id="myChart"></canvas>
+            </div>
+            <div class = "col-12 col-md-3">
+               <h3>Covid-19 </h3>
+               <p>"The COVID-19 pandemic, also known as the coronavirus pandemic, is an ongoing pandemic of coronavirus disease 2019 (COVID-19) caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2), first identified in December 2019 in Wuhan, China." (<a href="https://en.wikipedia.org/wiki/COVID-19_pandemic">Wikipedia</a>)</p>
+            </div>
+         </div>
+      </div>
+      <h2>Example AJAX call to Covid19api</h2>
+      <button type="button" onclick="loadContent()">Load Covid-19 Content</button>
+      <!-- ChartJS: https://www.chartjs.org/ -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
+      <!-- Lodash: https://lodash.com/ -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
+      <!-- Day.js: https://day.js.org/docs/en/installation/browser -->
+      <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+      <script>dayjs().format();</script>
+      <script src="https://turtlesmew.github.io/assignments/assignment05.js"></script>
+   </body>
+</html>
