--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -14,7 +14,7 @@
             </div>
             <div class = "col-12 col-md-3">
                <h3>Covid-19 </h3>
-               <p>"The COVID-19 pandemic, also known as the coronavirus pandemic, is an ongoing pandemic of coronavirus disease 2019 (COVID-19) caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2), first identified in December 2019 in Wuhan, China." (<a href="https://en.wikipedia.org/wiki/COVID-19_pandemic">Wikipedia</a>)</p>
+               <i>"The COVID-19 pandemic, also known as the coronavirus pandemic, is an ongoing pandemic of coronavirus disease 2019 (COVID-19) caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2), first identified in December 2019 in Wuhan, China." (<a href="https://en.wikipedia.org/wiki/COVID-19_pandemic">Wikipedia</a>)</i>
             </div>
          </div>
       </div>
