--- a/assignments/assignment06.html
+++ b/assignments/assignment06.html
@@ -62,7 +62,9 @@
                         </tr>
                      </table>
                      <br />
-                     <button type="button" class="btn btn-primary" onclick="processForm();">Re-calculate</button> 
+                     <button type="button" class="btn btn-primary" onclick="populate();">Re-calculate</button>
+                     <button type="button" class="btn btn-primary" onclick="saveForm();">Save</button> 
+                     <button type="button" class="btn btn-primary" onclick="loadForm();">Load</button> 
                   </div>
                </div>
                <div class="col-lg-6">
@@ -75,11 +77,11 @@
                            <th>Int Amt</th>
                            <th>YE Bal</th>
                         </tr>
-                        <tr>
-                           <td><span id="pmt_year01">2025</span></td>
-                           <td><span id="pmt_amt01">$6,500.00</span></td>
-                           <td><span id="pmt_int01">$2,297.60</span></td>
-                           <td><span id="pmt_bal01">$53,017.22</span></td>
+                        <tr ng-repeat="x in payments">
+                              <td>{{ x.year }}</td>
+                              <td>{{ x.payment }}</td>
+                              <td>{{ x.amt }}</td>
+                              <td>{{ x.ye }}</td>
                         </tr>
                      </table>
                   </div>
@@ -92,5 +94,6 @@
          src="https://code.jquery.com/jquery-3.4.1.min.js"
          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
          crossorigin="anonymous"></script>
+      <script src="https://turtlesmew.github.io/assignments/assignment06.js"></script>
    </body>
 </html>
