--- a/assignments/assignment06.html
+++ b/assignments/assignment06.html
@@ -62,7 +62,7 @@
                         </tr>
                      </table>
                      <br />
-                     <button type="button" class="btn btn-primary" onclick="populate();">Re-calculate</button>
+                     <button type="button" class="btn btn-primary" ng-click="populate();">Re-calculate</button>
                      <button type="button" class="btn btn-primary" onclick="saveForm();">Save</button> 
                      <button type="button" class="btn btn-primary" onclick="loadForm();">Load</button> 
                   </div>
