--- a/assignments/assignment06.html
+++ b/assignments/assignment06.html
@@ -94,6 +94,6 @@
          src="https://code.jquery.com/jquery-3.4.1.min.js"
          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
          crossorigin="anonymous"></script>
-      <script src="https://turtlesmew.github.io/assignments/test.js"></script>
+      <script src="https://turtlesmew.github.io/assignments/assignment06.js"></script>
    </body>
 </html>
