--- a/assignments/assignment06.html
+++ b/assignments/assignment06.html
@@ -12,6 +12,7 @@
    </head>
    <body onload="loadDoc();">
       <div class="container">
+         <div ng-app="myApp" ng-controller="myCtrl">
          <form>
             <h1>College Debt Estimator</h1>
             <br />
@@ -87,6 +88,7 @@
                   </div>
                </div>
             </div>
+         </div>
          </form>
       </div>
       <!--- jquery 3.4.1 -->
