--- a/assignments/assignment06.html
+++ b/assignments/assignment06.html
@@ -97,6 +97,6 @@
          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
          crossorigin="anonymous"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-      <script src="https://turtlesmew.github.io/assignments/test.js"></script>
+      <script src="https://turtlesmew.github.io/assignments/assignment06.js"></script>
    </body>
 </html>
